<resources>
    <string name="app_name">FriendZone</string>
    <string name="update_information">Update Information</string>
    <string name="log_out">Log Out</string>
    <string name="name">Name:</string>
    <string name="age">Age:</string>
    <string name="gender">Gender:</string>
    <string name="description">Description:</string>
    <string name="sport">Sport:</string>
    <string name="movie">Movie:</string>
    <string name="music">Music:</string>
    <string name="book">Book:</string>
    <string name="food">Food:</string>
    <string name="travel">Travel:</string>
    <string name="genderInterested">Gender Interested:</string>
    <string name="save">Save</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="haven_t_registered_sign_up_here">Haven\'t registered? Sign up here</string>
    <string name="friend_zone">Friend Zone</string>
    <string name="your_first_choice_dating_app">Your First Choice Dating App</string>
    <string name="email2">Email</string>
    <string name="password2">Password</string>
    <string name="register">Register</string>
    <string name="already_registered_log_in_here">Already registered? Log in here.</string>
    <string name="confirm_your_password">Confirm your password</string>
    <string name="friend_zone2">Friend Zone</string>
    <string name="your_first_choice_dating_app2">Your First Choice Dating App</string>
    <string name="todo">TODO</string>
    <string name="sign_in_with_tantan_account">Sign in with Tantan or Tinder account</string>


    <string-array name="gen">
        <item>Male</item>
        <item>Female</item>
        <item>Prefer not to say</item>

    </string-array>

    <string-array name="spo">
        <item>Badminton</item>
        <item>Swimming</item>
        <item>Basketball</item>
        <item>Football</item>

    </string-array>

    <string-array name="mov">
        <item>Action</item>
        <item>Comedy</item>
        <item>Horror</item>
        <item>Romance</item>

    </string-array>

    <string-array name="mus">
        <item>Rock</item>
        <item>Jazz</item>
        <item>Rhythm and Blues</item>
        <item>Electronic dance</item>

    </string-array>

    <string-array name="boo">
        <item>Biographies and Autobiographies</item>
        <item>Cookbooks</item>
        <item>Detective and Mystery</item>
        <item>Fiction</item>

    </string-array>

    <string-array name="foo">
        <item>Malay food</item>
        <item>Chinese food</item>
        <item>Indian food</item>
        <item>Western food</item>

    </string-array>

    <string-array name="tra">
        <item>Solo travel</item>
        <item>Travel with friends</item>
        <item>Family travel</item>
        <item>Adventure travel</item>

    </string-array>

    <string-array name="genInt">
        <item>Male</item>
        <item>Female</item>

    </string-array>
</resources>
